# oiv2

./: .gitignore  README.md  cli.py  cli_utils.py  conversation.py  env.example  hello.py  lm.py  oi.py  pyproject.toml  structure.py  structured.py
.archive/: interpreter.py  messages.py
oiv2/: cli.py  cli_utils.py  conversation.py  oi.py  setup.py  streamed_tag_parser.py  structured.py  test.py
oiv2/tools/: __init__.py  files.py  input.py  jupyter.py  list_tools.py  print_tool.py  python_runner.py  screen.py  terminal.py  tools.py
tools/: __init__.py  python_runner.py  terminal.py  tools.py  user_input.py
