[project]
name = "oiv2"
version = "0.2.0"
description = "Compact AI assistant with computer automation - grid-based screen interaction for small LLMs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "litellm>=1.65.0",
    "pydantic>=2.11.1",
    "pillow>=10.0.0",
    "pyautogui>=0.9.54",
    "sqlite-vec>=0.1.6",
]

[project.scripts]
interpreter = "cli:main"
oiv2 = "oiv2.cli:main"
oiv2-setup = "setup:check"
oiv2-test = "test:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
